tests/cases/functions/ok/function-extern-c.ari
extern "C" fn puts(text: ptr c_char) -> i64 = "puts";

fn main() -> i64 {
  puts("function-extern-ok");
  return 0;
}
